--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -70,6 +70,10 @@
       {% if author.github %}
         <li><a href="https://github.com/{{ author.github }}"><i class="fab fa-fw fa-github icon-pad-right" aria-hidden="true"></i>Github</a></li>
       {% endif %}
+      {% if author.CSDN %}
+        <li><a href="https://https://www.csdn.net/{{ author.CSDN }}"><i class="fab fa-fw fa-CSDN icon-pad-right" aria-hidden="true"></i>CSDN</a></li>
+      {% endif %}
+      
       {% if author.kaggle %}
         <li><a href="https://kaggle.com/{{ author.kaggle }}"><i class="fab fa-fw fa-kaggle icon-pad-right" aria-hidden="true"></i>Kaggle</a></li>
       {% endif %}      
