--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -71,7 +71,7 @@
         <li><a href="https://github.com/{{ author.github }}"><i class="fab fa-fw fa-github icon-pad-right" aria-hidden="true"></i>Github</a></li>
       {% endif %}
       {% if author.CSDN %}
-        <li><a href="https:///www.csdn.net/{{ author.CSDN }}"><i class="fab fa-fw fa-csdn icon-pad-right" aria-hidden="true"></i>CSDN</a></li>
+        <li><a href="https://blog.csdn.net/{{ author.CSDN }}"><i class="fab fa-fw fa-csdn icon-pad-right" aria-hidden="true"></i>CSDN</a></li>
       {% endif %}
       
       {% if author.kaggle %}
